--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Ram & Antara getting hitched!</title>
+    <title>Антон & Ксюша!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
@@ -18,9 +18,6 @@
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="stylesheet" type="text/css" href="css/menikah.css" />
@@ -247,8 +244,8 @@
 <section id="eng-pics" class="section-padding">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 text-center">
-                <h1 class="title">Воспоминания</h1><div></div>
+            <div class="col-md-12 text-center" data-aos="fade-up" data-aos-easing="linear">
+                <h1 class="title">Воспоминания</h1>
             </div>
         </div>
         <div class="row">
@@ -336,9 +333,6 @@
         <div class="col-md-12 text-center" data-aos="fade-up" data-aos-easing="linear">
             <h1 class="title">Место проведения</h1>
         </div>
-        <div class="section-map" data-aos="fade-up" data-aos-easing="linear">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d73062.28508558193!2d36.53529594097578!3d55.092324831062214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x46cad2be51e879c9%3A0x991be6024a566a46!2sObninsk%2C%20Obninsk%2C%20Kaluga%20Oblast!3m2!1d55.092254399999995!2d36.6176965!5e0!3m2!1sru!2sru!4v1707811033898!5m2!1sru!2sru" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
     </div>
 
 <!-- End Lokasi Content -->
@@ -352,14 +346,16 @@
                 </div>
                 <div id="map-content" class="pointer-events-auto">
                     <div class="row">
-                        <div class="col-md-6">
-                            <h5>Адрес</h5>
-                            <p>Пакистан страна грез</p>
+                        <div class="col-md-12">
+                            <h5>Адрес:</h5>
+                            <p>ЗАГС: г.Москва, Измайловское ш., 73Ж, Москва (Дворец бракосочетания №5, Измайловский кремль)</p>
                         </div>
-                        <div class="col-md-6">
-                            <h5>Mr. Звезда</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+88005553535">88005553535</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+88005553535">88005553535</a></p>
+                        <div class="col-md-12">
+                            <p>РЕСТОРАН: Москва, Измайловское шоссе, дом 71 корпус 3В, 2 этаж (Комплекс «Вега», ресторан «Измайловский двор»)</p>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <h5>Антон <i class="fa fa-mobile"></i> <a href="tel://+88005553535">88005553535</a><br></h5>
+                            <h5>Ксения <i class="fa fa-mobile"></i> <a href="tel://+88005553535">88005553535</a></h5>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -393,7 +389,7 @@
     </div><!-- /.modal -->
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-12 text-center" data-aos="fade-up" data-aos-easing="linear">
                 <h3>Мы рады если вы присоеденитесь к нашему торжеству</h3>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
